Backport.

Remove atEnd() calls and use the result of readLine to find out if the file is at EOF.
This should speed up reading files with a large number of lines.

BUG: 118926

svn path=/branches/KDE/3.5/kdepim/; revision=491743