kioslaves/mbox/readmbox.h
@@ -121,6 +121,7 @@ private:
 	QTextStream* m_stream;
 	QString* m_current_line;
 	QString* m_current_id;
+	bool m_atend;
 
 	struct utimbuf* m_prev_time;
 
